--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^7.5.0",
     "axios": "^1.12.2",
     "expo": "~54.0.20",
+    "expo-navigation-bar": "~5.0.9",
     "expo-secure-store": "^15.0.7",
     "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.548.0",
