--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,14 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-  "@react-native-community/datetimepicker": "8.4.4",
-  "@react-native-picker/picker": "^2.11.4",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/bottom-tabs": "^7.5.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.5.0",
     "axios": "^1.12.2",
     "expo": "~54.0.20",
     "expo-image-picker": "~17.0.10",
+    "expo-localization": "^17.0.8",
     "expo-navigation-bar": "~5.0.9",
     "expo-secure-store": "^15.0.7",
     "expo-status-bar": "~3.0.8",
@@ -25,9 +26,8 @@
     "react": "19.1.0",
     "react-i18next": "^16.5.0",
     "react-native": "0.81.5",
-  "react-native-maps": "1.20.1",
-  "react-native-modal-datetime-picker": "^18.0.0",
-  "react-native-localize": "^3.6.0",
+    "react-native-maps": "1.20.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1"
