--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^7.5.0",
     "axios": "^1.12.2",
     "expo": "~54.0.20",
+    "expo-av": "^16.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-localization": "^17.0.8",
     "expo-navigation-bar": "~5.0.9",
